Fix accessibility (text contrast) in the privacy banner

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -649,7 +649,7 @@ a.image.cc {
   }
 }
 .privacycolor {
-  color: #9e9e9e;
+  color: #a6a6a6;
 }
 
 .red {
